first step completed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     </header> -->
 
     <main class="main">
-        <h2>Etch-a-Sketch</h2>
+        <div id="input-box">
+            <input type="text" id="no_of_squares">
+            <button class="btn-add">Add Squares</button>
+        </div>
         <div id="container">
 
         </div>
