added the event listener

--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- <header>
-        <button class="btn-add">Add Box</button>
-    </header> -->
+  
 
     <main class="main">
-        <div id="input-box">
-            <input type="text" id="no_of_squares">
-            <button class="btn-add">Add Squares</button>
-        </div>
-        <div id="container">
+        <section class="slide-container">
+            <input type="range" class="slider" min="8" max="64", step="8" value="8" id="myRange">
+            <span id="demo"></span>
+            <button class="btn-add">Add</button>
+        </section>
+        <div id="main-container">
 
         </div>
     </main>
