--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
 
     <main class="main">
+
         <section class="slide-container">
-            <input type="range" class="slider" min="8" max="64", step="8" value="8" id="myRange">
+            <input type="range" class="slider" min="44" max="64", step="2"  id="myRange">
             <span id="demo"></span>
             <button class="btn-add">Add</button>
+            <button class="btn-blue">Blue</button>
         </section>
-        <div id="main-container">
 
+        <div id="main-container">
         </div>
+
     </main>
+    
     <script src="script.js"></script>
 </body>
 </html>
