--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
     <main class="main">
 
         <section class="slide-container">
-            <input type="range" class="slider" min="44" max="64", step="2"  id="myRange">
+            <input type="range" class="slider" min="34" max="48", step="2"  id="myRange">
             <span id="demo"></span>
-            <button class="btn-add">Add</button>
-            <button class="btn-blue">Blue</button>
+            <button class="btn btn-add">Add</button>
+            <button class="btn btn-erase">Erase</button>
         </section>
-
+        
         <div id="main-container">
+        </div>
+        
+        <div class="change-colour">
+            <button class="btn btn-red">Red</button>
+            <button class="btn btn-yellow">Yellow</button>
+            <button class="btn btn-blue">Blue</button>
+            <button class="btn btn-green">Green</button>
         </div>
 
     </main>
